fixed productService